Fix error in form to enter name Altered text size in larger screen size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h2 id="sub-title">[Demo of the Dead]</h2>
 			<!-- username entry -->
 			<div id="enter-name">
-				<form action="javascript:void(0);" onsubmit="chooseDifficulty()">
+				<form action="javascript:void(0);" id="name-input">
 				<label for="name">Enter your name to begin:</label><br>
 				<input type="text" id="name" name="name" placeholder="Name" required><br>
 				<button type="submit" name="start-btn" id="start-btn" class="start-btn btn">Start</button>
