--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 					<button class="hidden" id="next-btn-02">next &gt;&gt;</button>
 					<button class="hidden" id="next-btn-03">next &gt;&gt;</button>
 					<button class="hidden" id="next-btn-04">next &gt;&gt;</button>
+					<button class="hidden" id="next-btn-05">next &gt;&gt;</button>
+					<button class="hidden" id="next-btn-06">next &gt;&gt;</button>
 				</div>
 				<div id="questions" class="hidden">
 				</div>
