Tidy up code and add notation.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 				<div id="text-box">
 				</div>
 				<div id="next-btn-box">
+					<button class="hidden" id="next-btn">next &gt;&gt;</button>
 					<button class="hidden" id="next-btn-01">next &gt;&gt;</button>
 					<button class="hidden" id="next-btn-02">next &gt;&gt;</button>
 					<button class="hidden" id="next-btn-03">next &gt;&gt;</button>
