--- a/index.html
+++ b/index.html
@@ -167,19 +167,23 @@
 			emailjs.init('3Q0SMJLBwZIF-Uvwg');
 		})();
 		//emailjs function
-		window.onload = function() {
-			document.getElementById('contact-form').addEventListener('submit', function(event) {
-				event.preventDefault();
-				// generate a five digit number for the contact_number variable
-				this.contact_number.value = Math.random() * 100000 | 0;
-				// these IDs from the previous steps
-				emailjs.sendForm('service_pmzmnla', 'contact-form', this).then(function() {
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
 					document.getElementById('contact-form').reset();
-									  }, function(error) {
-						alert("I'm sorry, the form failed to send.");
-					});
-				});
-			}
+					alert('Thank you for the feedback.');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+					alert('Sorry, message failed to send.');
+                    });
+            });
+        }
 	</script>
 </body>
 </html>
