--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 		<p>Thank you for checking out Trivia Survivor. Please consider leaving a comment on your experience with the game.</p>
 		<div id="feedback-form">
 			<form id="contact-form">
-				<input type="hidden" name="contact_number" required><br>
+				<input type="hidden" name="contact_number"><br>
 				<label>Name:</label><br>
-				<input type="text" name="user_name" required><br>
+				<input type="text" name="user_name"><br>
 				<label>Email:</label><br>
-				<input type="email" name="user_email" required><br>
+				<input type="email" name="user_email"><br>
 				<label>Comment:</label><br>
-				<textarea name="message" required></textarea><br>
+				<textarea name="message"></textarea><br>
 				
 				<div id="form-btn-box">
 					<button type="submit" value="Send">Send</button>
