--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -6,11 +6,6 @@
     <meta name="keywords" content="Trivia, Survivor, movie, horror-movie, quiz, zombie">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10">
     <link rel="stylesheet" href="assets/css/style.css">
-	<!-- Favicon links courtesy of https://favicon.io/favicon-converter/ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 	
 	<title>Trivia Survivor</title>
 	
@@ -139,9 +134,9 @@
 			<form id="contact-form">
 				<input type="hidden" name="contact_number"><br>
 				<label>Name:</label><br>
-				<input type="text" name="user_name"><br>
+				<input type="text" name="user-name"><br>
 				<label>Email:</label><br>
-				<input type="email" name="user_email"><br>
+				<input type="email" name="user-email"><br>
 				<label>Comment:</label><br>
 				<textarea name="message"></textarea><br>
 				
@@ -173,7 +168,7 @@
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact_form', this)
+                emailjs.sendForm('contact_service', 'contact-form', this)
                     .then(function() {
                         console.log('SUCCESS!');
 					document.getElementById('contact-form').reset();
