--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
 	
 	<title>Trivia Survivor</title>
 	
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('3Q0SMJLBwZIF-Uvwg');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
+	
 </head>
 
 <body>
@@ -131,21 +155,22 @@
 		<h1>FEEDBACK</h1>
 		<p>Thank you for checking out Trivia Survivor. Please consider leaving a comment on your experience with the game.</p>
 		<div id="feedback-form">
-			<form id="contact-form">
-				<input type="hidden" name="contact_number"><br>
-				<label>Name:</label><br>
-				<input type="text" name="user-name"><br>
-				<label>Email:</label><br>
-				<input type="email" name="user-email"><br>
-				<label>Comment:</label><br>
-				<textarea name="message"></textarea><br>
-				
+			    <form id="contact-form">
+        <input type="hidden" name="contact_number">
+        <label>Name</label><br>
+        <input type="text" name="user_name"><br>
+        <label>Email</label><br>
+        <input type="email" name="user_email"><br>
+        <label>Message</label><br>
+        <textarea name="message"></textarea><br>
+        <input type="submit" value="Send"><br><br>
+    </form>
+
+			
 				<div id="form-btn-box">
-					<button type="submit" value="Send">Send</button>
 					<button id="continue-btn-comment">Continue</button>
 				</div>
-				</form>
-			
+				
 		</div>
 	</div>
 	</section>
@@ -154,31 +179,5 @@
 	<script type="text/javascript" src="assets/js/script.js"></script>
 	<!-- Adding script for fontawesome icons -->	
 	<script src="https://kit.fontawesome.com/5216db6454.js" crossorigin="anonymous"></script>
-	<!-- Adding script for email JS function -->	
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-		//emailjs login
-		(function() {
-			// https://dashboard.emailjs.com/admin/account
-			emailjs.init('3Q0SMJLBwZIF-Uvwg');
-		})();
-		//emailjs function
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                // generate a five digit number for the contact_number variable
-                this.contact_number.value = Math.random() * 100000 | 0;
-                // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact-form', this)
-                    .then(function() {
-                        console.log('SUCCESS!');
-					document.getElementById('contact-form').reset();
-					alert('Thank you for the feedback.');
-                    }, function(error) {
-                        console.log('FAILED...', error);
-					alert('Sorry, message failed to send.');
-                    });
-            });
-        }
-	</script>
 </body>
 </html>
