--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Trivia Survivor, use your knowledge of movie trivia to escape the creature."
-    />
-    <meta
-      name="keywords"
-      content="Trivia, Survivor, movie, horror-movie, quiz, zombie"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <meta charset="utf-8">
+    <meta name="description" content="Trivia Survivor, use your knowledge of movie trivia to escape the creature.">
+    <meta name="keywords" content="Trivia, Survivor, movie, horror-movie, quiz, zombie">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Trivia Survivor</title>
 
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
       (function () {
         // https://dashboard.emailjs.com/admin/account
@@ -86,27 +74,21 @@
               id="name"
               name="name"
               placeholder="Name"
-              required
-            /><br />
+              required><br>
             <button
               type="submit"
               name="start-btn"
               id="start-btn"
-              class="start-btn btn"
-            >
+              class="start-btn btn">
               Start
             </button>
           </form>
         </div>
         <!-- Difficulty mode selection -->
         <div id="choose-difficulty" class="hidden">
-          <button id="easy-btn" class="easy-btn btn" value="easy">Easy</button
-          ><br />
-          <button id="normal-btn" class="normal-btn btn" value="normal">
-            Normal</button
-          ><br />
-          <button id="hard-btn" class="hard-btn btn" value="hard">Hard</button
-          ><br />
+          <button id="easy-btn" class="easy-btn btn" value="easy">Easy</button><br>
+          <button id="normal-btn" class="normal-btn btn" value="normal">Normal</button><br>
+          <button id="hard-btn" class="hard-btn btn" value="hard">Hard</button><br>
         </div>
       </div>
 
@@ -120,48 +102,35 @@
                 id="danger-square-05"
                 src="assets/images/danger-block-05.webp"
                 class="hidden"
-                alt="A red coloured square."
-              />
+                alt="A red coloured square.">
             </div>
             <div class="danger-square">
               <img
                 id="danger-square-04"
                 src="assets/images/danger-block-04.webp"
                 class="hidden"
-                alt="An orange coloured square."
-              />
+                alt="An orange coloured square.">
             </div>
             <div class="danger-square">
               <img
                 id="danger-square-03"
                 src="assets/images/danger-block-03.webp"
                 class="hidden"
-                alt="A green-yellow mix coloured square."
-              />
+                alt="A green-yellow mix coloured square.">
             </div>
             <div class="danger-square">
               <img
                 id="danger-square-02"
                 src="assets/images/danger-block-02.webp"
                 class="hidden"
-                alt="A more pale green coloured square."
-              />
+                alt="A more pale green coloured square.">
             </div>
             <div class="danger-square">
-              <img
-                id="danger-square-01"
-                src="assets/images/danger-block-01.webp"
-                class="hidden"
-                alt="A green coloured square."
-              />
+              <img id="danger-square-01" src="assets/images/danger-block-01.webp" class="hidden" alt="A green coloured square.">
             </div>
           </div>
           <div id="view-box">
-            <img
-              id="zombie"
-              src="assets/images/zombie-approach-00.webp"
-              alt="An empty corridor."
-            />
+            <img id="zombie" src="assets/images/zombie-approach-00.webp" alt="An empty corridor.">
           </div>
         </div>
         <!-- Bottom half of the game card -->
@@ -172,38 +141,10 @@
           </div>
           <div id="questions" class="hidden"></div>
           <div id="answers" class="hidden">
-            <button
-              id="answer-btn-a"
-              class="btn answer-btn"
-              value="A"
-              aria-label="Answer Button A"
-            >
-              Answer A</button
-            ><br />
-            <button
-              id="answer-btn-b"
-              class="btn answer-btn"
-              value="B"
-              aria-label="Answer Button B"
-            >
-              Answer B</button
-            ><br />
-            <button
-              id="answer-btn-c"
-              class="btn answer-btn"
-              value="C"
-              aria-label="Answer Button C"
-            >
-              Answer C</button
-            ><br />
-            <button
-              id="answer-btn-d"
-              class="btn answer-btn"
-              value="D"
-              aria-label="Answer Button D"
-            >
-              Answer D</button
-            ><br />
+            <button id="answer-btn-a" class="btn answer-btn" value="A" aria-label="Answer Button A">Answer A</button><br>
+            <button id="answer-btn-b" class="btn answer-btn" value="B" aria-label="Answer Button B">Answer B</button><br>
+            <button id="answer-btn-c" class="btn answer-btn" value="C" aria-label="Answer Button C">Answer C</button><br>
+            <button id="answer-btn-d" class="btn answer-btn" value="D" aria-label="Answer Button D">Answer D</button><br>
           </div>
         </div>
       </div>
@@ -247,7 +188,6 @@
           <button id="continue-btn-info">Continue</button>
         </div>
       </div>
-
       <!-- A feedback form -->
       <div id="comment-card" class="card">
         <h1>FEEDBACK</h1>
@@ -257,29 +197,24 @@
         </p>
         <div id="feedback-form">
           <form id="contact-form">
-            <input type="hidden" name="contact_number" required />
-            <label>Name</label><br />
-            <input type="text" name="user_name" required /><br />
-            <label>Email</label><br />
-            <input type="email" name="user_email" required /><br />
-            <label>Message</label><br />
-            <textarea name="message" required></textarea><br />
-            <input type="submit" value="Send" /><br /><br />
+            <input type="hidden" name="contact_number" required>
+            <label>Name</label><br>
+            <input type="text" name="user_name" required><br>
+            <label>Email</label><br>
+            <input type="email" name="user_email" required><br>
+            <label>Message</label><br>
+            <textarea name="message" required></textarea><br>
+            <input type="submit" value="Send"><br><br>
           </form>
-
           <div id="form-btn-box">
             <button id="continue-btn-comment">Continue</button>
           </div>
         </div>
       </div>
     </section>
-
     <!-- link to Javascript file -->
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <!-- Adding script for fontawesome icons -->
-    <script
-      src="https://kit.fontawesome.com/5216db6454.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/5216db6454.js" crossorigin="anonymous"></script>
   </body>
 </html>
