--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title>Trivia Survivor</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <script>
       (function () {
         // https://dashboard.emailjs.com/admin/account
         emailjs.init("3Q0SMJLBwZIF-Uvwg");
       })();
     </script>
-    <script type="text/javascript">
+    <script>
       window.onload = function () {
         document
           .getElementById("contact-form")
@@ -68,7 +68,7 @@
         <!-- username entry -->
         <div id="enter-name">
           <form action="javascript:void(0);" id="name-input">
-            <label for="name">Enter your name to begin:</label><br />
+            <label for="name">Enter your name to begin:</label><br>
             <input
               type="text"
               id="name"
@@ -197,7 +197,7 @@
         </p>
         <div id="feedback-form">
           <form id="contact-form">
-            <input type="hidden" name="contact_number" required>
+            <input type="hidden" name="contact_number">
             <label>Name</label><br>
             <input type="text" name="user_name" required><br>
             <label>Email</label><br>
