--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Trivia Survivor, use your knowledge of movie trivia to escape the creature.">
-    <meta name="keywords" content="Trivia, Survivor, movie, horror-movie, quiz, zombie">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10">
-    <link rel="stylesheet" href="assets/css/style.css">
-	  <!-- favicon -->
-
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="assets/favicon/site.webmanifest">
-
-    <title>Trivia Survivor</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	
+	<head>
+		
+		<meta charset="utf-8">
+		<meta name="description" content="Trivia Survivor, use your knowledge of movie trivia to escape the creature.">
+		<meta name="keywords" content="Trivia, Survivor, movie, horror-movie, quiz, zombie">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=10">
+		
+		<link rel="stylesheet" href="assets/css/style.css">
+		
+		<!-- favicon -->
+		
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+		<link rel="manifest" href="assets/favicon/site.webmanifest">
+		
+		<title>Trivia Survivor</title>
+		
+		<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
       (function () {
         // https://dashboard.emailjs.com/admin/account
@@ -218,6 +223,7 @@
     </section>
     <!-- link to Javascript file -->
     <script src="assets/js/script.js"></script>
+	  <script src="assets/js/questions.js"></script>
     <!-- Adding script for fontawesome icons -->
     <script src="https://kit.fontawesome.com/5216db6454.js" crossorigin="anonymous"></script>
   </body>
