Add modal function to replace alert

--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
         </div>
       </div>
     </section>
+		
+		<!-- The Modal  as from https://www.w3schools.com/howto/howto_css_modals.asp -->
+		<div id="modal" class="modal">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<p id="modal_message">Some text in the Modal..</p>
+				<button id="continue-btn-modal">Continue</button>
+			</div>
+		</div>
 
 	      <!-- Adding script for fontawesome icons -->
 		<script src="https://kit.fontawesome.com/5216db6454.js" crossorigin="anonymous"></script>
