Update modal message test

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		<div id="modal" class="modal">
 			<!-- Modal content -->
 			<div class="modal-content">
-				<p id="modal_message">Some text in the Modal..</p>
+				<p id="modal_message">What a horrible night to have a curse.</p>
 				<button id="continue-btn-modal">Continue</button>
 			</div>
 		</div>
