Add modal message to contact form replacing alerts

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <!-- A feedback form -->
       <div id="comment-card" class="card">
         <h1>FEEDBACK</h1>
-        <p>
+        <p id="feedback-text">
           Thank you for checking out Trivia Survivor. Please consider leaving a
           comment on your experience with the game.
         </p>
