Remove line that trys to disable contact form

--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@
       <!-- A feedback form -->
       <div id="comment-card" class="card">
         <h1>FEEDBACK</h1>
-        <p id="feedback-text">
-          Thank you for checking out Trivia Survivor. Please consider leaving a
-          comment on your experience with the game.
-        </p>
+        <p id="feedback-text">Thank you for checking out Trivia Survivor. Please consider leaving a comment on your experience with the game.</p>
         <div id="feedback-form">
           <form id="contact-form">
             <input type="hidden" name="contact_number">
